--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.6-nightly</MauiVersion>
+        <MauiVersion>8.0.10-nightly</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.6</MauiVersion>
+        <MauiVersion>8.0.7</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -13,12 +13,14 @@
     <ItemGroup>
     <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
-        <!--#if (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.1" />
+        <!--#if (Net9)-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-preview.1.24081.5" />
+        <!--#elif (Net8)-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.2" />
         <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.15" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.16" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.26" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.27" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
@@ -28,14 +30,14 @@
         <PackageVersion Include="Clancey.Comet" Version="0.3.467-beta" />
         <!--#endif-->
         <!--#if (AddFoldablePackage)-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#else-->
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="7.0.101" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMapsPackage)-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.0" />
@@ -51,7 +53,11 @@
         <!--#if (Hybrid || Razor)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
+        <!--#if (Net9)-->
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0-preview.1.24080.9" Condition="'$(Configuration)' == 'Debug'" />
+        <!--#else-->
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" Condition="'$(Configuration)' == 'Debug'" />
+        <!--#endif-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddToolkitPackage)-->
@@ -98,10 +104,18 @@
         <PackageVersion Include="CompiledBindings.MAUI" Version="1.0.17.6" />
         <!--#endif-->
         <!--#if (Reactor)-->
+        <!--#if (Net8OrLater)-->
+        <PackageVersion Include="Reactor.Maui" Version="2.0.26" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="2.0.26" />
+        <!--#if (AddMapsPackage)-->
+        <PackageVersion Include="Reactor.Maui.Maps" Version="2.0.26" />
+        <!--#endif-->
+        <!--#else-->
         <PackageVersion Include="Reactor.Maui" Version="1.0.154" />
         <PackageVersion Include="Reactor.Maui.Canvas" Version="1.0.154" />
         <!--#if (AddMapsPackage)-->
         <PackageVersion Include="Reactor.Maui.Maps" Version="1.0.154" />
+        <!--#endif-->
         <!--#endif-->
         <!--#endif-->
     <!--#if (PackageRef)-->
