--- a/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.6-nightly</MauiVersion>
+        <MauiVersion>8.0.10-nightly</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.6</MauiVersion>
+        <MauiVersion>8.0.7</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -19,23 +19,29 @@
         <PackageVersion Include="FSharp.Maui.WinUICompat" Version="1.1.0" />
         <!--#endif-->
         <!--#if (Hybrid)-->
-        <!--#if (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.1" />
+        <!--#if (Net9)-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-preview.1.24081.5" />
+        <!--#elif (Net8)-->
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.2" />
         <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.15" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.16" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.26" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.27" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Net7OrLater)-->
         <PackageVersion Include="Fabulous" Version="2.4.0" />
         <PackageVersion Include="Fabulous.MauiControls" Version="2.8.0" />
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <!--#if (Hybrid)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
         <PackageVersion Include="FSharp.Core" Version="8.0.100" />
+        <!--#if (Net9)-->
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0-preview.1.24080.9" />
+        <!--#else-->
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+        <!--#endif-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddToolkitPackage)-->
@@ -70,7 +76,7 @@
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddFoldablePackage)-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#else-->
         <PackageVersion Include="Microsoft.Maui.Controls.Foldable" Version="7.0.101" />
