--- a/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--#if (Net8)-->
+    <!--#if (Net8OrLater)-->
     <!--#if (Hybrid)-->
     <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="34" />
     <!--#else-->
