Templates updated to support .NET MAUI 8 SR3

--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.10-nightly</MauiVersion>
+        <MauiVersion>8.0.20-nightly.10307</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.7</MauiVersion>
+        <MauiVersion>8.0.10</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -14,13 +14,13 @@
     <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-preview.1.24081.5" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-preview.2.24128.4" />
         <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.2" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.3" />
         <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.16" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.17" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.27" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.28" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
@@ -67,7 +67,7 @@
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
         <!--#endif-->
         <!--#if (AddMediaPackage)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="3.0.1" />
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="3.1.0" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.2.0" />
