--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.10-nightly</MauiVersion>
+        <MauiVersion>8.0.20-nightly.10307</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.7</MauiVersion>
+        <MauiVersion>8.0.10</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
