--- a/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiClassLib/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.40-nightly.10455</MauiVersion>
+        <MauiVersion>8.0.60-ci.net8.10656</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.20</MauiVersion>
+        <MauiVersion>8.0.40</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -24,7 +24,7 @@
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddToolkitPackage)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="8.0.1" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="9.0.0" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
