--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -3,9 +3,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.40-nightly.10455</MauiVersion>
+        <MauiVersion>8.0.60-ci.net8.10656</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.20</MauiVersion>
+        <MauiVersion>8.0.40</MauiVersion>
         <!--#endif-->
         <!--#endif-->
     </PropertyGroup>
@@ -16,11 +16,11 @@
         <!--#if (Net9)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0-preview.3.24172.13" />
         <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.5" />
         <!--#elif (Net7)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.18" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.19" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.29" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="6.0.30" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
@@ -40,7 +40,7 @@
         <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.0" />
+        <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.0.2" />
         <!--#endif-->
         <!--#else-->
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="7.0.101" />
@@ -61,13 +61,13 @@
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddToolkitPackage)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="8.0.1" />
+        <PackageVersion Include="CommunityToolkit.Maui" Version="9.0.0" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
         <!--#endif-->
         <!--#if (AddMediaPackage)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="3.1.0" />
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="3.1.1" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.2.0" />
