--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -122,10 +122,10 @@
         <ApplicationTitle>MauiApp.1</ApplicationTitle>
 
         <!-- App Identifier -->
-        <!--#if (AllPlatforms || IsAndroid || IsiOS || IsmacOS)-->
+        <!--#if (AllPlatforms || IsAndroid || IsiOS || IsmacOS || (Net8OrLater && IsWindows))-->
         <ApplicationId>com.companyname.mauiappid</ApplicationId>
         <!--#endif-->
-        <!--#if (AllPlatforms || IsWindows)-->
+        <!--#if (Net7OrEarlier && (AllPlatforms || IsWindows))-->
         <ApplicationIdGuid>81a9fb0a-63f5-4ef6-b38e-0cf88600102a</ApplicationIdGuid>
         <!--#endif-->
 
@@ -174,6 +174,9 @@
 
     <ItemGroup>
         <None Remove="MauiApp.1.code-workspace" />
+        <!--#if (CentralPkgMgmt)-->
+        <None Remove="Directory.Packages.props" />
+        <!--#endif-->
     </ItemGroup>
 
     <!--#if (PackageRef)-->
@@ -271,7 +274,7 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="8.*" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
