--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -37,9 +37,12 @@
         <None Include="**\*.forms.cs" />
     </ItemGroup>
 
-    <!--#if (!no-solution-file)-->
+    <!--#if (!no-solution-file || CentralPkgMgmt)-->
     <ItemGroup>
         <None Remove="SharedClassLib.1.code-workspace" />
+        <!--#if (CentralPkgMgmt)-->
+        <None Remove="Directory.Packages.props" />
+        <!--#endif-->
     </ItemGroup>
 
     <!--#endif-->
@@ -93,7 +96,7 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#if (AddMauiToolkit)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="8.*" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
