Templates updated to support .NET MAUI 9 Preview 3 and Apple Privacy Manifest

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -335,6 +335,12 @@
     <!--#if (PackageRef)-->
     </ItemGroup>
     <!--#endif-->
+    <!--#if (AllPlatforms || IsiOS)-->
+
+    <ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
+        <BundleResource Include="Platforms\iOS\PrivacyInfo.xcprivacy" LogicalName="PrivacyInfo.xcprivacy" />
+    </ItemGroup>
+    <!--#endif-->
     <!--#if (Hybrid && RazorLib)-->
 
     <ItemGroup>
