--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -366,6 +366,12 @@
     </ItemGroup>
     <!--#endif-->
 
+    <!--#if (AllPlatforms || IsiOS)-->
+    <ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
+        <BundleResource Include="Platforms\iOS\PrivacyInfo.xcprivacy" LogicalName="PrivacyInfo.xcprivacy" />
+    </ItemGroup>
+    <!--#endif-->
+
     <!--#if (Hybrid)-->
     <ItemGroup>
         <Content Include="wwwroot\css\app.css">
