Solution and Project file changes #227

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -168,7 +168,7 @@
 
     <ItemGroup>
         <None Remove="MauiApp.1.code-workspace" />
-        <!--#if (CentralPkgMgmt)-->
+        <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
         <!--#endif-->
     </ItemGroup>
