--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -140,10 +140,10 @@
         <!--#endif-->
     </PropertyGroup>
 
-    <!--#if (!no-solution-file || CentralPkgMgmt)-->
+    <!--#if (!no-solution-file || Net8 || CentralPkgMgmt)-->
     <ItemGroup>
         <None Remove="MauiClassLib.1.code-workspace" />
-        <!--#if (CentralPkgMgmt)-->
+        <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
         <!--#endif-->
     </ItemGroup>
