--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -30,10 +30,10 @@
         <None Include="**\*.forms.cs" />
     </ItemGroup>
 
-    <!--#if (!no-solution-file || CentralPkgMgmt)-->
+    <!--#if (!no-solution-file || Net8 || CentralPkgMgmt)-->
     <ItemGroup>
         <None Remove="SharedClassLib.1.code-workspace" />
-        <!--#if (CentralPkgMgmt)-->
+        <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
         <!--#endif-->
     </ItemGroup>
